[gd_scene load_steps=8 format=3 uid="uid://cdnlynldmg8ig"]

[ext_resource type="Script" uid="uid://82g2lbbab14d" path="res://ui/battle_ui/battle_ui.gd" id="1_yv4ab"]
[ext_resource type="Texture2D" uid="uid://wuc2gqqblxlb" path="res://assets/ui/Box.png" id="2_qhe7k"]
[ext_resource type="Texture2D" uid="uid://bvgwktro22pqr" path="res://assets/ui/button.png" id="3_ut4tm"]
[ext_resource type="Texture2D" uid="uid://dm8a2g6x3wrdx" path="res://assets/ui/button_pressed.png" id="4_yv4ab"]
[ext_resource type="Texture2D" uid="uid://bprkavxhccard" path="res://assets/ui/button_disabled.png" id="5_bwb3e"]

[sub_resource type="Theme" id="Theme_nbs7w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gm1yj"]
texture = ExtResource("2_qhe7k")

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yv4ab")

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -73.0
offset_right = 64.0
grow_vertical = 0
theme = SubResource("Theme_nbs7w")
theme_override_styles/panel = SubResource("StyleBoxTexture_gm1yj")

[node name="VBoxContainer" type="VBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="TextureButton" parent="ActionsPanel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ut4tm")
texture_pressed = ExtResource("4_yv4ab")
texture_disabled = ExtResource("5_bwb3e")

[node name="SkillButton" type="TextureButton" parent="ActionsPanel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ut4tm")
texture_pressed = ExtResource("4_yv4ab")
texture_disabled = ExtResource("5_bwb3e")

[node name="LimitButton" type="TextureButton" parent="ActionsPanel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ut4tm")
texture_pressed = ExtResource("4_yv4ab")
texture_disabled = ExtResource("5_bwb3e")

[node name="SkillsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -73.0
offset_right = 128.0
grow_vertical = 0
theme = SubResource("Theme_nbs7w")
theme_override_styles/panel = SubResource("StyleBoxTexture_gm1yj")

[node name="VBoxContainer" type="VBoxContainer" parent="SkillsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillButton" type="TextureButton" parent="SkillsPanel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ut4tm")
texture_pressed = ExtResource("4_yv4ab")
texture_disabled = ExtResource("5_bwb3e")

[connection signal="pressed" from="ActionsPanel/VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="ActionsPanel/VBoxContainer/SkillButton" to="." method="_on_skill_button_pressed"]
